Fix cors-2